Add larger favicon to satisfy Lighthouse review

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,6 +38,11 @@
       "src": "favicon/favicon-196.png",
       "sizes": "196x196",
       "type": "image/png"
+    },
+    {
+      "src": "favicon/favicon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "./",
